Fix dialog z-index so it sits on top of nav

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ h4 {
 }
 
 .montserrat {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .success-isbn {
@@ -100,6 +100,7 @@ h4 {
 .dialog {
     backdrop-filter: blur(5px) brightness(0.9);
     background: rgba(0, 0, 0, 0.6);
+    z-index: 40;
 }
 
 /* Star rating */
@@ -121,7 +122,7 @@ h4 {
     color: #ccc;
 }
 .rate:not(:checked) > label:before {
-    content: "★";
+    content: '★';
 }
 .rate > input:checked ~ label {
     color: #fb7185;
@@ -155,9 +156,13 @@ h4 {
 }
 
 .Stars::before {
-    content: "★★★★★";
+    content: '★★★★★';
     letter-spacing: 3px;
-    background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+    background: linear-gradient(
+        90deg,
+        var(--star-background) var(--percent),
+        var(--star-color) var(--percent)
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
